--- a/configs/config.json
+++ b/configs/config.json
@@ -1,37 +1,14 @@
 {
     "your_campus":"崇山校区",
-    "your_account1": "4032432399",
-    "your_password1": "000000",
+    "your_account1": "4032430180",
+    "your_password1": "Holmes221B",
     "start_time1": "09:00",
     "end_time1": "15:00",
-    "your_account2": "4032330032",
+    "your_account2": "4032330040",
     "your_password2": "000000",
     "start_time2": "15:00",
     "end_time2": "21:00",
     "your_preferroom": "三楼理科书库",
-    "your_prefersit": "93",
+    "your_prefersit": "94",
     "your_cdkey":"996ac13d84"
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
